--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "require": {
         "php": ">=5.4.0",
-        "ext-gd": "*",
+        "ext-gd": "*"
     },
     "config": {
         "optimize-autoloader": true,
